rewrite-xml/src/main/java/org/openrewrite/xml/internal/grammar/XMLParser.java
/*
 * Copyright 2026 the original author or authors.
 * <p>
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * <p>
 * https://www.apache.org/licenses/LICENSE-2.0
 * <p>
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
// Generated from rewrite-xml/src/main/antlr/XMLParser.g4 by ANTLR 4.13.2
package org.openrewrite.xml.internal.grammar;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

import java.util.ArrayList;
import java.util.Iterator;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class XMLParser extends XMLParserBase {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
    public static final int WS = 1;
    public static final int COMMENT = 2;
    public static final int CDATA = 3;
    public static final int ParamEntityRef = 4;
    public static final int EntityRef = 5;
    public static final int CharRef = 6;
    public static final int SEA_WS = 7;
    public static final int UTF_ENCODING_BOM = 8;
    public static final int QUESTION_MARK = 9;
    public static final int SPECIAL_OPEN_XML = 10;
    public static final int OPEN = 11;
    public static final int SPECIAL_OPEN = 12;
    public static final int DTD_OPEN = 13;
    public static final int JSP_COMMENT = 14;
    public static final int JSP_DECLARATION = 15;
    public static final int JSP_EXPRESSION = 16;
    public static final int JSP_SCRIPTLET = 17;
    public static final int TEXT = 18;
    public static final int DTD_CLOSE = 19;
    public static final int DTD_SUBSET_OPEN = 20;
    public static final int DTD_S = 21;
    public static final int DOCTYPE = 22;
    public static final int DTD_SUBSET_CLOSE = 23;
    public static final int MARKUP_OPEN = 24;
    public static final int DTS_SUBSET_S = 25;
    public static final int MARK_UP_CLOSE = 26;
    public static final int MARKUP_S = 27;
    public static final int MARKUP_STRING = 28;
    public static final int MARKUP_TEXT = 29;
    public static final int MARKUP_SUBSET = 30;
    public static final int PI_S = 31;
    public static final int PI_TEXT = 32;
    public static final int CLOSE = 33;
    public static final int SPECIAL_CLOSE = 34;
    public static final int SLASH_CLOSE = 35;
    public static final int S = 36;
    public static final int DIRECTIVE_OPEN = 37;
    public static final int DIRECTIVE_CLOSE = 38;
    public static final int SLASH = 39;
    public static final int EQUALS = 40;
    public static final int STRING = 41;
    public static final int Name = 42;
    public static final int RULE_document = 0;
    public static final int RULE_prolog = 1;
    public static final int RULE_xmldecl = 2;
    public static final int RULE_misc = 3;
    public static final int RULE_doctypedecl = 4;
    public static final int RULE_intsubset = 5;
    public static final int RULE_markupdecl = 6;
    public static final int RULE_declSep = 7;
    public static final int RULE_externalid = 8;
    public static final int RULE_processinginstruction = 9;
    public static final int RULE_content = 10;
    public static final int RULE_element = 11;
    public static final int RULE_voidClose = 12;
    public static final int RULE_jspdirective = 13;
    public static final int RULE_jspscriptlet = 14;
    public static final int RULE_jspexpression = 15;
    public static final int RULE_jspdeclaration = 16;
    public static final int RULE_jspcomment = 17;
    public static final int RULE_reference = 18;
    public static final int RULE_attribute = 19;
    public static final int RULE_chardata = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"document", "prolog", "xmldecl", "misc", "doctypedecl", "intsubset",
			"markupdecl", "declSep", "externalid", "processinginstruction", "content",
			"element", "voidClose", "jspdirective", "jspscriptlet", "jspexpression",
			"jspdeclaration", "jspcomment", "reference", "attribute", "chardata"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "'?'", null, "'<'",
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, "'/>'",
			null, "'%@'", "'%'", "'/'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "COMMENT", "CDATA", "ParamEntityRef", "EntityRef", "CharRef",
			"SEA_WS", "UTF_ENCODING_BOM", "QUESTION_MARK", "SPECIAL_OPEN_XML", "OPEN",
			"SPECIAL_OPEN", "DTD_OPEN", "JSP_COMMENT", "JSP_DECLARATION", "JSP_EXPRESSION",
			"JSP_SCRIPTLET", "TEXT", "DTD_CLOSE", "DTD_SUBSET_OPEN", "DTD_S", "DOCTYPE",
			"DTD_SUBSET_CLOSE", "MARKUP_OPEN", "DTS_SUBSET_S", "MARK_UP_CLOSE", "MARKUP_S",
			"MARKUP_STRING", "MARKUP_TEXT", "MARKUP_SUBSET", "PI_S", "PI_TEXT", "CLOSE",
			"SPECIAL_CLOSE", "SLASH_CLOSE", "S", "DIRECTIVE_OPEN", "DIRECTIVE_CLOSE",
			"SLASH", "EQUALS", "STRING", "Name"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "XMLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public XMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DocumentContext extends ParserRuleContext {
		public PrologContext prolog() {
			return getRuleContext(PrologContext.class,0);
		}
		public TerminalNode UTF_ENCODING_BOM() { return getToken(XMLParser.UTF_ENCODING_BOM, 0); }
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public DocumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_document; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).enterDocument(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).exitDocument(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XMLParserVisitor) {
                return ((XMLParserVisitor<? extends T>) visitor).visitDocument(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final DocumentContext document() throws RecognitionException {
		DocumentContext _localctx = new DocumentContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_document);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==UTF_ENCODING_BOM) {
				{
				setState(42);
				match(UTF_ENCODING_BOM);
				}
			}

			setState(45);
			prolog();
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPEN) {
				{
				setState(46);
				element();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrologContext extends ParserRuleContext {
		public XmldeclContext xmldecl() {
			return getRuleContext(XmldeclContext.class,0);
		}
		public List<MiscContext> misc() {
			return getRuleContexts(MiscContext.class);
		}
		public MiscContext misc(int i) {
			return getRuleContext(MiscContext.class,i);
		}
		public List<JspdirectiveContext> jspdirective() {
			return getRuleContexts(JspdirectiveContext.class);
		}
		public JspdirectiveContext jspdirective(int i) {
			return getRuleContext(JspdirectiveContext.class,i);
		}
		public PrologContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prolog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).enterProlog(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).exitProlog(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XMLParserVisitor) {
                return ((XMLParserVisitor<? extends T>) visitor).visitProlog(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final PrologContext prolog() throws RecognitionException {
		PrologContext _localctx = new PrologContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prolog);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(50);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SPECIAL_OPEN_XML) {
				{
				setState(49);
				xmldecl();
				}
			}

			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((_la & ~0x3F) == 0 && ((1L << _la) & 61444L) != 0) {
				{
				{
				setState(52);
				misc();
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(61);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(58);
					jspdirective();
					}
					}
				}
				setState(63);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class XmldeclContext extends ParserRuleContext {
		public TerminalNode SPECIAL_OPEN_XML() { return getToken(XMLParser.SPECIAL_OPEN_XML, 0); }
		public TerminalNode SPECIAL_CLOSE() { return getToken(XMLParser.SPECIAL_CLOSE, 0); }
		public List<AttributeContext> attribute() {
			return getRuleContexts(AttributeContext.class);
		}
		public AttributeContext attribute(int i) {
			return getRuleContext(AttributeContext.class,i);
		}
		public XmldeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xmldecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).enterXmldecl(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).exitXmldecl(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XMLParserVisitor) {
                return ((XMLParserVisitor<? extends T>) visitor).visitXmldecl(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final XmldeclContext xmldecl() throws RecognitionException {
		XmldeclContext _localctx = new XmldeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_xmldecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(SPECIAL_OPEN_XML);
			setState(68);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Name) {
				{
				{
				setState(65);
				attribute();
				}
				}
				setState(70);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(71);
			match(SPECIAL_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MiscContext extends ParserRuleContext {
		public TerminalNode COMMENT() { return getToken(XMLParser.COMMENT, 0); }
		public DoctypedeclContext doctypedecl() {
			return getRuleContext(DoctypedeclContext.class,0);
		}
		public ProcessinginstructionContext processinginstruction() {
			return getRuleContext(ProcessinginstructionContext.class,0);
		}
		public JspdeclarationContext jspdeclaration() {
			return getRuleContext(JspdeclarationContext.class,0);
		}
		public JspcommentContext jspcomment() {
			return getRuleContext(JspcommentContext.class,0);
		}
		public MiscContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_misc; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).enterMisc(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).exitMisc(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XMLParserVisitor) {
                return ((XMLParserVisitor<? extends T>) visitor).visitMisc(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final MiscContext misc() throws RecognitionException {
		MiscContext _localctx = new MiscContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_misc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMENT:
				{
				setState(73);
				match(COMMENT);
				}
				break;
			case DTD_OPEN:
				{
				setState(74);
				doctypedecl();
				}
				break;
			case SPECIAL_OPEN:
				{
				setState(75);
				processinginstruction();
				}
				break;
			case JSP_DECLARATION:
				{
				setState(76);
				jspdeclaration();
				}
				break;
			case JSP_COMMENT:
				{
				setState(77);
				jspcomment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoctypedeclContext extends ParserRuleContext {
		public TerminalNode DTD_OPEN() { return getToken(XMLParser.DTD_OPEN, 0); }
		public TerminalNode DOCTYPE() { return getToken(XMLParser.DOCTYPE, 0); }
		public TerminalNode Name() { return getToken(XMLParser.Name, 0); }
		public ExternalidContext externalid() {
			return getRuleContext(ExternalidContext.class,0);
		}
		public TerminalNode DTD_CLOSE() { return getToken(XMLParser.DTD_CLOSE, 0); }
		public List<TerminalNode> STRING() { return getTokens(XMLParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(XMLParser.STRING, i);
		}
		public TerminalNode DTD_SUBSET_OPEN() { return getToken(XMLParser.DTD_SUBSET_OPEN, 0); }
		public IntsubsetContext intsubset() {
			return getRuleContext(IntsubsetContext.class,0);
		}
		public TerminalNode DTD_SUBSET_CLOSE() { return getToken(XMLParser.DTD_SUBSET_CLOSE, 0); }
		public DoctypedeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doctypedecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).enterDoctypedecl(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).exitDoctypedecl(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XMLParserVisitor) {
                return ((XMLParserVisitor<? extends T>) visitor).visitDoctypedecl(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final DoctypedeclContext doctypedecl() throws RecognitionException {
		DoctypedeclContext _localctx = new DoctypedeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_doctypedecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(DTD_OPEN);
			setState(81);
			match(DOCTYPE);
			setState(82);
			match(Name);
			setState(83);
			externalid();
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STRING) {
				{
				{
				setState(84);
				match(STRING);
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DTD_SUBSET_OPEN) {
				{
				setState(90);
				match(DTD_SUBSET_OPEN);
				setState(91);
				intsubset();
				setState(92);
				match(DTD_SUBSET_CLOSE);
				}
			}

			setState(96);
			match(DTD_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IntsubsetContext extends ParserRuleContext {
		public List<MarkupdeclContext> markupdecl() {
			return getRuleContexts(MarkupdeclContext.class);
		}
		public MarkupdeclContext markupdecl(int i) {
			return getRuleContext(MarkupdeclContext.class,i);
		}
		public List<DeclSepContext> declSep() {
			return getRuleContexts(DeclSepContext.class);
		}
		public DeclSepContext declSep(int i) {
			return getRuleContext(DeclSepContext.class,i);
		}
		public IntsubsetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intsubset; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).enterIntsubset(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).exitIntsubset(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XMLParserVisitor) {
                return ((XMLParserVisitor<? extends T>) visitor).visitIntsubset(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final IntsubsetContext intsubset() throws RecognitionException {
		IntsubsetContext _localctx = new IntsubsetContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_intsubset);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((_la & ~0x3F) == 0 && ((1L << _la) & 16781332L) != 0) {
				{
				setState(100);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case COMMENT:
				case SPECIAL_OPEN:
				case MARKUP_OPEN:
					{
					setState(98);
					markupdecl();
					}
					break;
				case ParamEntityRef:
					{
					setState(99);
					declSep();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MarkupdeclContext extends ParserRuleContext {
		public TerminalNode MARKUP_OPEN() { return getToken(XMLParser.MARKUP_OPEN, 0); }
		public TerminalNode MARK_UP_CLOSE() { return getToken(XMLParser.MARK_UP_CLOSE, 0); }
		public List<TerminalNode> MARKUP_SUBSET() { return getTokens(XMLParser.MARKUP_SUBSET); }
		public TerminalNode MARKUP_SUBSET(int i) {
			return getToken(XMLParser.MARKUP_SUBSET, i);
		}
		public List<TerminalNode> MARKUP_TEXT() { return getTokens(XMLParser.MARKUP_TEXT); }
		public TerminalNode MARKUP_TEXT(int i) {
			return getToken(XMLParser.MARKUP_TEXT, i);
		}
		public List<TerminalNode> MARKUP_STRING() { return getTokens(XMLParser.MARKUP_STRING); }
		public TerminalNode MARKUP_STRING(int i) {
			return getToken(XMLParser.MARKUP_STRING, i);
		}
		public ProcessinginstructionContext processinginstruction() {
			return getRuleContext(ProcessinginstructionContext.class,0);
		}
		public TerminalNode COMMENT() { return getToken(XMLParser.COMMENT, 0); }
		public MarkupdeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_markupdecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).enterMarkupdecl(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).exitMarkupdecl(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XMLParserVisitor) {
                return ((XMLParserVisitor<? extends T>) visitor).visitMarkupdecl(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final MarkupdeclContext markupdecl() throws RecognitionException {
		MarkupdeclContext _localctx = new MarkupdeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_markupdecl);
		int _la;
		try {
			int _alt;
			setState(127);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MARKUP_OPEN:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(105);
				match(MARKUP_OPEN);
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(106);
						_la = _input.LA(1);
						if ( !(_la==MARKUP_STRING || _la==MARKUP_TEXT) ) {
						_errHandler.recoverInline(this);
						}
						else {
                            if (_input.LA(1) == Token.EOF) {
                                matchedEOF = true;
                            }
							_errHandler.reportMatch(this);
							consume();
						}
						}
						}
					}
					setState(111);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==MARKUP_SUBSET) {
					{
					{
					setState(112);
					match(MARKUP_SUBSET);
					}
					}
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==MARKUP_STRING || _la==MARKUP_TEXT) {
					{
					{
					setState(118);
					_la = _input.LA(1);
					if ( !(_la==MARKUP_STRING || _la==MARKUP_TEXT) ) {
					_errHandler.recoverInline(this);
					}
					else {
                        if (_input.LA(1) == Token.EOF) {
                            matchedEOF = true;
                        }
						_errHandler.reportMatch(this);
						consume();
					}
					}
					}
					setState(123);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(124);
				match(MARK_UP_CLOSE);
				}
				}
				break;
			case SPECIAL_OPEN:
				enterOuterAlt(_localctx, 2);
				{
				setState(125);
				processinginstruction();
				}
				break;
			case COMMENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				match(COMMENT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclSepContext extends ParserRuleContext {
		public TerminalNode ParamEntityRef() { return getToken(XMLParser.ParamEntityRef, 0); }
		public DeclSepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declSep; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).enterDeclSep(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).exitDeclSep(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XMLParserVisitor) {
                return ((XMLParserVisitor<? extends T>) visitor).visitDeclSep(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}

	public final DeclSepContext declSep() throws RecognitionException {
		DeclSepContext _localctx = new DeclSepContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declSep);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(ParamEntityRef);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExternalidContext extends ParserRuleContext {
		public TerminalNode Name() { return getToken(XMLParser.Name, 0); }
		public ExternalidContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_externalid; }
		@Override
		public void enterRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).enterExternalid(this);
            }
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
            if (listener instanceof XMLParserListener) {
                ((XMLParserListener) listener).exitExternalid(this);
            }
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof XMLParserVisitor) {
                return ((XMLParserVisitor<? extends T>) visitor).visitExternalid(this);
            } else {
                return visitor.visitChildren(this);
            }
		}
	}
